# qemu-nrf52

./: CMakeLists.txt  launch_qemu_direct.bat
configs/devices/arm-softmmu/: default.mak
docs/: conf.py
fw/: PowerMeter.elf
hw/adc/: Kconfig  max11254.c  meson.build  nrf52_saadc.c
hw/arm/: Kconfig  meson.build  nrf51422DK.c  nrf51422_soc.c  nrf52832DK.c  nrf52832_soc.c  z_model.c
hw/char/: nrf51_uart.c
hw/dma/: Kconfig  meson.build  nrf52_edma.c  nrf5x_ppi.c  nrf5x_radio.c
hw/gpio/: meson.build  nrf51_gpio.c  nrf52_gpiote.c
hw/nvram/: meson.build  nrf51_nvm.c  nrf52_nvm.c
hw/sd/: ssi-sd.c
hw/sensor/: Kconfig  bmp390.c  lis2dw12.c  lsm6dsox.c  meson.build  tmp421.c
hw/timer/: meson.build  nrf51_timer.c  nrf_clock.c  nrf_rtc.c
include/hw/adc/: nrf52_saadc.h
include/hw/arm/: nrf51.h  nrf51422_soc.h  nrf52832_soc.h  z_model.h
include/hw/char/: nrf51_uart.h
include/hw/dma/: nrf52_edma.h  nrf5x_ppi.h  nrf5x_radio.h
include/hw/gpio/: nrf51_gpio.h  nrf52_gpiote.h
include/hw/nvram/: nrf51_nvm.h  nrf52_nvm.h
include/hw/timer/: nrf51_timer.h  nrf_clock.h  nrf_rtc.h
include/qemu/: osdep.h
